--- a/misc/kdeadmin3/Makefile
+++ b/misc/kdeadmin3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.36 2007/01/17 23:47:21 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2007/01/26 03:08:23 markd Exp $
 
 DISTNAME=	kdeadmin-${_KDE_VERSION}
 CATEGORIES=	misc
@@ -13,6 +13,7 @@ CONFIGURE_ARGS+=	--with-shadow
 .else
 CONFIGURE_ARGS+=	--without-shadow
 .endif
+CONFIGURE_ENV+=		DO_NOT_COMPILE=ksysv
 
 .include "../../meta-pkgs/kde3/kde3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
