--- a/x11/xf86-video-wsfb/Makefile
+++ b/x11/xf86-video-wsfb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/11/14 17:16:27 joerg Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/14 23:05:04 reed Exp $
 
 DISTNAME=	xf86-video-wsfb-0.2.0
 CATEGORIES=	x11
@@ -7,6 +7,8 @@ EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	reed@NetBSD.org
 COMMENT=	Modular Xorg wsdisplay framebuffer video driver
+
+ONLY_FOR_PLATFORM=	NetBSD-*-* OpenBSD-*-*
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
