--- a/databases/Makefile
+++ b/databases/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.222 2007/01/13 21:36:31 abs Exp $
+# $NetBSD: Makefile,v 1.223 2007/01/26 11:02:47 dillo Exp $
 #
 
 COMMENT=	Databases
@@ -88,6 +88,7 @@ SUBDIR+=	p5-Ima-DBI
 SUBDIR+=	p5-MARC
 SUBDIR+=	p5-MLDBM
 SUBDIR+=	p5-MLDBM-Sync
+SUBDIR+=	p5-Net-MySQL
 SUBDIR+=	p5-Palm
 SUBDIR+=	p5-SQL-Abstract
 SUBDIR+=	p5-SQL-Statement
