--- a/graphics/djvulibre-lib/Makefile
+++ b/graphics/djvulibre-lib/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/08/30 17:03:28 drochner Exp $
 #
 
-DISTNAME=		djvulibre-3.5.17
-PKGNAME=		djvulibre-lib-3.5.17
+DISTNAME=		djvulibre-3.5.18
+PKGNAME=		djvulibre-lib-3.5.18
 CATEGORIES=		graphics
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=djvu/}
 
