--- a/editors/vim-share/Makefile.common
+++ b/editors/vim-share/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.74 2007/01/10 14:26:50 martti Exp $
+# $NetBSD: Makefile.common,v 1.75 2007/01/22 07:35:34 martti Exp $
 
 .include "../../editors/vim-share/version.mk"
 
@@ -37,6 +37,7 @@ CONFLICTS+=		vim-kde-[0-9]*
 
 WRKSRC=			${WRKDIR}/${VIM_SUBDIR}/src
 GNU_CONFIGURE=		yes
+MAKE_JOBS_SAFE=		no	# At least on Solaris
 
 .include "../../mk/bsd.prefs.mk"
 
