--- a/graphics/libggiwmh/Makefile
+++ b/graphics/libggiwmh/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/02/05 23:09:34 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2006/03/04 21:29:49 jlam Exp $
 #
 
 DISTNAME=		libggiwmh-0.2.1.src
@@ -22,5 +22,9 @@ PKG_SYSCONFSUBDIR=	ggi
 EGDIR=			${PREFIX}/share/examples/libggiwmh
 CONF_FILES=		${EGDIR}/libggiwmh.conf ${PKG_SYSCONFDIR}/libggiwmh.conf
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../graphics/libggi/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
