--- a/devel/ncurses/Makefile.common
+++ b/devel/ncurses/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.3 2007/01/08 11:01:05 adam Exp $
+# $NetBSD: Makefile.common,v 1.4 2007/01/11 07:32:16 rillig Exp $
 
 DISTNAME=	ncurses-${NC_VERS}
 NC_VERS=	5.6
@@ -40,5 +40,8 @@ TERMINFODIR=	share/lib/terminfo
 PLIST_SUBST+=	NOT_SUNOS=""
 TERMINFODIR=	share/terminfo
 .endif
+
+# This prevents tic from writing into ~/.terminfo
+INSTALLATION_DIRS+=	${TERMINFODIR}
 
 PLIST_SUBST+=	TERMINFODIR=${TERMINFODIR:Q}
