--- a/net/netsaint-base/Makefile.common
+++ b/net/netsaint-base/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.11 2005/12/05 23:55:14 rillig Exp $
+# $NetBSD: Makefile.common,v 1.12 2006/04/23 00:12:40 jlam Exp $
 #
 
 CATEGORIES=		net sysutils
@@ -33,5 +33,3 @@ CONFIGURE_ARGS+=	--with-lockfile=var/run/netsaint/netsaint.lock
 CONFIGURE_ARGS+=	--with-netsaint-user=${NETSAINT_USER:Q}
 CONFIGURE_ARGS+=	--with-netsaint-grp=${NETSAINT_GROUP:Q}
 CONFIGURE_ARGS+=	--with-init-dir=${PREFIX}/etc/rc.d
-
-.include "../../mk/x11.buildlink3.mk"
