--- a/fonts/ja-shinonome/Makefile
+++ b/fonts/ja-shinonome/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/03/14 01:14:28 jlam Exp $
+# $NetBSD: Makefile,v 1.17 2006/05/18 14:55:21 joerg Exp $
 #
 
 DISTNAME=		shinonome-0.9.10-src
@@ -28,8 +28,6 @@ CONFIGURE_ARGS+=	--with-fontdir=${FONTDIR:Q}
 CONFIGURE_ARGS+=	--disable-progressbar
 CONFIGURE_ARGS+=	--with-foundry=${FOUNDRY:Q}
 
-
-.include "../../mk/x11.buildlink3.mk"
 
 do-install:
 	cd ${WRKSRC}; \
