--- a/net/icsi-finger/Makefile
+++ b/net/icsi-finger/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2005/06/17 03:50:25 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2006/02/05 23:10:25 joerg Exp $
 #
 
 DISTNAME=	icsi-finger-1.0.27
@@ -16,8 +16,6 @@ XMPLD=		${PREFIX}/share/examples/icsi-finger
 XMPLDT=		${XMPLD}/targets
 
 INSTALLATION_DIRS=	bin libexec sbin
-
-.include "../../mk/x11.buildlink3.mk"
 
 pre-configure:
 		${RM} -f ${WRKSRC}/config.h
