--- a/sysutils/cfengine2/Makefile.common
+++ b/sysutils/cfengine2/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.8 2004/08/18 23:03:44 ben Exp $
+# $NetBSD: Makefile.common,v 1.9 2006/11/24 23:04:15 wiz Exp $
 #
 
-CFENGINE_VERSION= 2.1.10
+CFENGINE_VERSION= 2.1.22
 DISTNAME=	cfengine-${CFENGINE_VERSION}
 CATEGORIES=	sysutils net
 MASTER_SITES=	ftp://ftp.iu.hio.no/pub/cfengine/ \
