--- a/graphics/libvideogfx/Makefile
+++ b/graphics/libvideogfx/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/07/22 04:46:16 rillig Exp $
+# $NetBSD: Makefile,v 1.14 2006/10/04 21:44:47 wiz Exp $
 #
 
 DISTNAME=	libvideogfx-1.0.3
@@ -14,7 +14,12 @@ USE_LANGUAGES=	c c++
 USE_LIBTOOL=	YES
 GNU_CONFIGURE=	YES
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
+.include "../../x11/libXv/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
