--- a/graphics/eog2/Makefile
+++ b/graphics/eog2/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.66 2006/11/28 22:25:12 drochner Exp $
+# $NetBSD: Makefile,v 1.67 2007/01/14 10:47:21 joerg Exp $
 #
 
-DISTNAME=	eog-2.16.2
+DISTNAME=	eog-2.16.3
 CATEGORIES=	graphics gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/eog/2.16/}
 EXTRACT_SUFX=	.tar.bz2
