--- a/devel/libevent/Makefile
+++ b/devel/libevent/Makefile
@@ -1,5 +1,11 @@
-# $NetBSD: Makefile,v 1.16 2006/08/29 14:01:51 tv Exp $
+# $NetBSD: Makefile,v 1.17 2007/02/08 17:06:28 xtraeme Exp $
 #
+# WARNING: updating this package (as of the 1.1/1.2 releases) means
+# updating BUILDLINK_ABI_DEPENDS in buildlink3.mk and a PKGREVISION
+# bump of all first-level dependents.  This is because the shlib
+# name contains the exact libevent release number, preventing it
+# from being ABI compatible across releases until this is fixed.
+# [tvierling 20070210]
 
 DISTNAME=	libevent-1.2a
 CATEGORIES=	devel
