--- a/devel/memcached/Makefile
+++ b/devel/memcached/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2006/03/04 21:29:18 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2007/01/07 09:13:51 rillig Exp $
 #
 
 DISTNAME=	memcached-1.1.12
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	http://www.danga.com/memcached/dist/
 
