--- a/security/fragroute/Makefile
+++ b/security/fragroute/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2006/02/05 23:10:43 joerg Exp $
+# $NetBSD: Makefile,v 1.9 2006/03/04 21:30:33 jlam Exp $
 
 DISTNAME=	fragroute-1.2
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	security net
 MASTER_SITES=	http://monkey.org/~dugsong/fragroute/
 
