--- a/security/scanssh/Makefile
+++ b/security/scanssh/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2006/02/05 23:10:47 joerg Exp $
+# $NetBSD: Makefile,v 1.20 2006/03/04 21:30:38 jlam Exp $
 
 DISTNAME=	scanssh-2.1
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	security
 MASTER_SITES=	http://monkey.org/~provos/				\
 		ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/scanssh/
