--- a/www/crawl/Makefile
+++ b/www/crawl/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2005/12/29 06:22:22 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2006/04/22 09:22:16 rillig Exp $
 
 DISTNAME=	crawl-0.4
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	www
 MASTER_SITES=	http://monkey.org/~provos/
 
