--- a/devel/librfuncs/Makefile
+++ b/devel/librfuncs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/01/26 18:47:06 shannonjr Exp $
+# $NetBSD: Makefile,v 1.12 2006/03/01 15:58:03 drochner Exp $
 #
 
 DISTNAME=		librfuncs-1.0.7
@@ -23,8 +23,8 @@ PTHREAD_AUTO_VARS=	no
 CONFIGURE_ARGS+=	--disable-threads
 .else
 CONFIGURE_ARGS+=	--enable-threads
-CONFIGURE_ARGS+=	--with-thread-cflags=${PTHREAD_CFLAGS:Q}
-CONFIGURE_ARGS+=	--with-thread-ldflags=${PTHREAD_LDFLAGS:Q}
+CONFIGURE_ARGS+=	--with-thread-cflags=${PTHREAD_CFLAGS:M*:Q}
+CONFIGURE_ARGS+=	--with-thread-ldflags=${PTHREAD_LDFLAGS:M*:Q}
 .endif
 
 .include "../../mk/bsd.pkg.mk"
