--- a/editors/xemacs/Makefile.common
+++ b/editors/xemacs/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.16 2006/07/07 01:31:42 markd Exp $
+# $NetBSD: Makefile.common,v 1.17 2006/11/03 07:01:42 wiz Exp $
 
 DISTNAME=	xemacs-21.4.17
 CATEGORIES=	editors
@@ -103,6 +103,7 @@ post-extract:
 	@for f in ${EXTRA_FILES}; do \
 		${GTAR} xzCf ${WRKDIR} ${DISTDIR}/${DIST_SUBDIR}/$$f; \
 	done
+	${CP} ${FILESDIR}/dragonfly.h ${WRKSRC}/src/s/
 
 post-patch:
 	@${RM} -f ${WRKSRC}/etc/ctags.1.orig
