--- a/graphics/vtk/Makefile
+++ b/graphics/vtk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/02/05 23:09:40 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2006/09/16 19:37:51 rillig Exp $
 #
 
 PKGNAME=	vtk-${VTKDIST_VERSION}
@@ -9,6 +9,6 @@ COMMENT=	Visualization toolkit
 .include "../../devel/cmake/buildlink3.mk"
 .include "../../graphics/MesaLib/buildlink3.mk"
 .include "../../graphics/glu/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../graphics/vtk/Makefile.vtkdist"
 .include "../../mk/bsd.pkg.mk"
