--- a/graphics/Coin/Makefile
+++ b/graphics/Coin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2006/05/22 16:46:54 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2007/01/07 12:25:54 wiz Exp $
 
 DISTNAME=		Coin-2.4.4
 PKGREVISION=		3
@@ -24,5 +24,5 @@ CONFIGURE_ARGS+=	--enable-threadsafe
 .include "../../graphics/simage/buildlink3.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
 .include "../../graphics/glu/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
