--- a/lang/js/Makefile
+++ b/lang/js/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2006/06/02 16:45:52 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2006/06/03 01:22:33 joerg Exp $
 #
 
 DISTNAME=		js-0.2.5
@@ -15,7 +15,6 @@ COMMENT=		JavaScript virtual machine
 USE_PKGLOCALEDIR=	yes
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
-
-INFO_FILES=		# PLIST
+INFO_FILES=		yes
 
 .include "../../mk/bsd.pkg.mk"
