--- a/inputmethod/Chinput/Makefile
+++ b/inputmethod/Chinput/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/06/16 06:57:59 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/02/05 23:09:42 joerg Exp $
 
 DISTNAME=	Chinput-3.0
 PKGREVISION=	3
@@ -34,5 +34,6 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/doc/* ${PREFIX}/share/doc/Chinput
 
 .include "../../inputmethod/unicon-im/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
